# geocr-generator

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
core/: __init__.py  config.py  generator.py  metadata_extractor.py
docs/: _config.yml  config.example.yaml  croissant.ttl  index.md
recipes/: geocroissant.json
recipes/.ipynb_checkpoints/: test-checkpoint.ipynb
scripts/: __init__.py  geocr_generate.py
