[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocr-generator"
version = "1.0.0"
description = "A tool for generating GeoCroissant metadata from geospatial datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Harsh S.", email = "harshinde.hks@gmail.com"}
]
maintainers = [
    {name = "Harsh S.", email = "harshinde.hks@gmail.com"}
]
keywords = ["geospatial", "metadata", "croissant", "machine-learning", "datasets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml",
    "rasterio",
    "numpy",
    "mlcroissant",
]

[project.urls]
Homepage = "https://harshshinde0.github.io/geocr-generator"
Repository = "https://github.com/HarshShinde0/geocr-generator"
Issues = "https://github.com/HarshShinde0/geocr-generator/issues"

[project.scripts]
geocr-generate = "scripts.geocr_generate:main"

[tool.setuptools]
packages = ["core", "scripts"]
package-dir = {"" = "."}
py-modules = ["utils"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.ttl", "*.md"]
